[project]
name = "link-finder-mcp"
version = "0.1.0"
description = "MCP server for the Link Finder API — find backlink opportunities, analyze competitors, and manage prospecting projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Francois Dragon" }]
keywords = ["mcp", "link-finder", "seo", "backlinks", "netlinking"]
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
link-finder-mcp = "link_finder_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/link_finder_mcp"]
